src/test/success/function_array_parameter_and_return.egern
func concat(a: [[int]], b: [[int]]): [[int]] {
    var aLen = len(a)
    var bLen = len(b)
    var c = [[0], [], []]
    var i = 0
    while (i < aLen) {
        c[i] = a[i]
        i += 1
    }
    i = 0
    while (i < bLen) {
        c[aLen + i] = b[i]
        i += 1
    }
    return c
}

var a = [[1, 2], [3, 4]]
var b = [[5, 6]]
var c = concat(a, b)
print(c[0][0])
print(c[0][1])
print(c[1][0])
print(c[1][1])
print(c[2][0])
print(c[2][1])

print(a[0] == c[0])
print(a[1] == c[1])
print(b[0] == c[2])
