src/test/fail/pass_array_of_wrong_inner_type_fail.egern
func printElements(arr: [[int]]): void {
    var length = len(arr)
    var i = 0
    while (i < length) {
        var innerLength = len(arr[i])
        var j = 0
        while (j < innerLength) {
            print(arr[i][j])
            j += 1
        }
        i += 1
    }
}

printElements([[true, false], [true]])
